<resources>
    <string name="app_name">AOSB OTA</string>
    <string name="update">Update</string>
    <string name="flash">Install</string>
    <string name="changelog">Changelog</string>
    <string name="settings">Settings</string>
    <string name="checking">Checking for new version</string>
    <string name="checking_gapps">Checking for new version of GApps</string>
    <string name="checking_twrp">Checking for TWRP</string>
    <string name="check_rom_updates">Check ROM</string>
    <string name="check_rom_updates_summary">Check for updates of your ROM</string>
    <string name="check_rom_updates_error">Error checking for ROM updates</string>
    <string name="check_rom_updates_no_new">No ROM updates found</string>
    <string name="new_rom_found_title">Version %1$s found</string>
    <string name="no_new_rom_found">You\'ve got the last version installed</string>
    <string name="delta_download">Download Delta</string>
    <string name="delta_download_summary">Download Delta package (smaller)</string>
    <string name="rom_download">Download ROM</string>
    <string name="rom_download_summary">Version %1$s found</string>
    <string name="new_package_name">%1$s</string>
    <string name="check_gapps_updates">Check GApps</string>
    <string name="check_gapps_updates_summary">Check for latest GApps package</string>
    <string name="check_gapps_updates_no_new">No GApps updates found</string>
    <string name="check_gapps_updates_error">Error checking for GApps updates</string>
    <string name="new_gapps_found_title">New GApps package found</string>
    <string name="new_gapps_found_summary">A new version of the GApps package has been found. Do you want to download it now?\n\n%1$s\n MD5: %2$s\n</string>
    <string name="check_twrp_updates">Install OpenRecoveryScript</string>
    <string name="new_twrp_found_title">Install TWRP</string>
    <string name="new_twrp_found_summary">This will download and install %1$s recovery in your device.\nDo you want to continue?</string>
    <string name="check_twrp_updates_error">Error checking for TWRP</string>
    <string name="check_twrp_error_md5">Error checking TWRP. MD5 not match</string>
    <string name="twrp_installed">TWRP recovery installed in your device</string>
    <string name="check_twrp_updates_no_new">No recovery found for your device</string>
    <string name="downloading">Downloading</string>
    <string name="downloading_complete">Download complete</string>
    <string name="downloading_error">Error downloading file</string>
    <string name="downloading_interrupted">Download interrupted</string>
    <string name="downloading_nospace">Error downloading file: no space available</string>
    <string name="download_alert_title">Downloads path</string>
    <string name="download_alert_summary">Specify the path to save the downloads</string>
    <string name="download_alert_error">Please specify the path to save the downloads</string>
    <string name="download_cancel_title">Cancel download</string>
    <string name="download_cancel_message">Do you want to cancel the current download?</string>
    <string name="goo_browse">Browse Goo.im</string>
    <string name="goo_browse_all_compatible">Browse compatible ROMs</string>
    <string name="goo_browse_all">Browse all files</string>
    <string name="goo_browse_watchlist">Watchlist</string>
    <string name="goo_browse_error">Error browsing files</string>
    <string name="goo_browse_searching">Searching&#8230;</string>
    <string name="goo_category_title">Browsing %1$s</string>
    <string name="goo_download_title">Download</string>
    <string name="goo_download_summary">Do you want to download this file now?\n\n%1$s\n%2$s\n</string>
    <string name="menu_login">Login into Goo.im</string>
    <string name="settings_interface">Interface</string>
    <string name="settings_theme_title">Use dark theme</string>
    <string name="settings_theme_summary">Use dark them instead of Holo.Light</string>
    <string name="settings_update">Updates</string>
    <string name="download_path">Download path</string>
    <string name="time_notifications_never">Don\'t check</string>
    <string name="time_notifications_half_an_hour">Half an hour</string>
    <string name="time_notifications_an_hour">An hour</string>
    <string name="time_notifications_two_hours">Two hours</string>
    <string name="time_notifications_five_hours">Five hours</string>
    <string name="time_notifications_twentyfour_hours">Twenty four hours</string>
    <string name="checktime_title">Update check frequency</string>
    <string name="checktime_summary">Specify the time between each update check</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logging_in">Logging into goo.im...</string>
    <string name="logged_in">Now you are logged in</string>
    <string name="logged_invalid">Invalid username/password</string>
    <string name="logged_down">Unable to reach server</string>
    <string name="logged_out">You\'ve been logged out</string>
    <string name="watchlist_added">Folder added to watchlist</string>
    <string name="watchlist_removed">Folder removed from watchlist</string>
    <string name="watchlist_already">Folder already in watchlist</string>
    <string name="watchlist_add_confirm_title">Add to watchlist</string>
    <string name="watchlist_add_confirm">Do you want to add the folder to the watchlist?</string>
    <string name="watchlist_remove_confirm_title">Remove from watchlist</string>
    <string name="watchlist_remove_confirm">Do you want to remove the folder from the watchlist?</string>
    <string name="settings_gapps">Gapps</string>
    <string name="checkgapps_title">Check for Gapps automatically</string>
    <string name="checkgapps_summary">Check for Gapps automatically after checking for ROM updates</string>
    <string name="gapps_folder">Custom Gapps url</string>
    <string name="gapps_reset_folder">Back to official Gapps</string>
    <string name="gapps_folder_official">Using official Gapps</string>
    <string name="gapps_folder_alert_title">Gapps path url</string>
    <string name="gapps_folder_alert_summary">Insert the url of the folder where the Gapps are stored. Leave blank to use the official Gapps.</string>
    <string name="gapps_folder_select">Set as Gapps folder</string>
    <string name="gapps_folder_selected">Folder set as Gapps url</string>
    <string name="last_gapps_found_title">Newer Gapps package found</string>
    <string name="last_gapps_found_summary">This is the last GApps package found. Do you want to download it now?\n\n%1$s\n\nYou\'ve got version %2$s installed.\n</string>
    <string name="flash_now">Install now</string>
    <string name="flash_now_summary">Reboot into recovery and install selected zips</string>
    <string name="add_zip">Add zip</string>
    <string name="add_zip_summary">Add a zip to the install list</string>
    <string name="alert_file_title">%1$s</string>
    <string name="alert_file_summary">Path: %1$s\nSize: %2$s\nModified: %3$s</string>
    <string name="alert_file_delete">Delete from list</string>
    <string name="install_file_manager_error">No application found to pick the zip file. Please install a file manager.</string>
    <string name="install_file_manager_invalid_zip">Invalid ZIP file.</string>
    <string name="install_file_manager_not_found_zip">Not found item deleted from list.</string>
    <string name="install_file_manager_zip_added">Zip added to the flash queue</string>
    <string name="recovery_change_alert_title">Recovery found</string>
    <string name="recovery_change_alert_message">%1$s recovery folder found. Do you want to configure it as default?</string>
    <string name="recovery_changed">Recovery %1$s configured.</string>
    <string name="recovery_cwm">CWM-based</string>
    <string name="recovery_4ext">4EXT</string>
    <string name="recovery_twrp">TWRP</string>
    <string name="recovery_title">Select recovery</string>
    <string name="recovery_summary">Select the recovery intalled in your device</string>
    <string name="recovery_alert_title">Select recovery</string>
    <string name="recovery_alert_summary">Specify the recovery you are using</string>
    <string name="settings_recovery">Recovery</string>
    <string name="internalsdcard_title">Internal storage path</string>
    <string name="internalsdcard_summary">Specify the internal storage path used by the recovery</string>
    <string name="externalsdcard_title">External storage path</string>
    <string name="externalsdcard_summary">Specify the external storage path used by the recovery</string>
    <string name="sdcard_alert_title">Storage path</string>
    <string name="sdcard_alert_summary">Specify the storage name</string>
    <string name="sdcard_alert_error">Please specify the storage name</string>
    <string name="backup">Backup</string>
    <string name="wipe_system">Wipe System</string>
    <string name="wipe_data">Wipe Data</string>
    <string name="wipe_caches">Wipe Cache &amp; Dalvik</string>
    <string name="fix_permissions">Fix permissions</string>
    <string name="alert_reboot_title">Select actions and install</string>
    <string name="alert_reboot_now">Install now</string>
    <string name="alert_backup_title">Backup</string>
    <string name="alert_backup_message">Specify the backup name (spaces will be removed).</string>
    <string name="system">System</string>
    <string name="data">Data</string>
    <string name="cache">Cache</string>
    <string name="recovery">Recovery</string>
    <string name="boot">Boot</string>
    <string name="androidsecure">Android secure</string>
    <string name="sdext">SD-Ext</string>
    <string name="settings_showoptions_title">Options</string>
    <string name="settings_showoptions_summary">Chose options to show when pressing the Install Now button</string>
    <string name="alert_backup_space_title">Space left</string>
    <string name="alert_backup_space_message">There\'s less than %1$sGB in the internal sdcard. Do you want to continue with the backup?</string>
    <string name="alert_restore_title">Restore</string>
    <string name="alert_wipe_system_title">System wipe</string>
    <string name="alert_wipe_system_message">You are about to perform a system wipe. Are you sure you want to do that?</string>
    <string name="alert_delete_title">Delete</string>
    <string name="alert_deleting_folder">Deleting %1$s&#8230;</string>
    <string name="recovery_activity_title">Recovery</string>
    <string name="recovery_activity_backup_title">Backup</string>
    <string name="recovery_activity_backup_summary">Do a backup of your rom</string>
    <string name="recovery_activity_restore_title">Restore</string>
    <string name="recovery_activity_restore_summary">Restore a previous backup</string>
    <string name="recovery_activity_delete_title">Delete</string>
    <string name="recovery_activity_delete_summary">Delete a previous backup</string>
    <string name="recovery_activity_reboot_title">Reboot into recovery</string>
    <string name="recovery_activity_actions">Recovery actions</string>
    <string name="recovery_activity_actions_summary">Wipe data, caches and/or fix permissions</string>
    <string name="goo_package_description">%1$s\nMD5: %2$s\nFolder: %3$s\nDescription: %4$s</string>
    <string name="ouc_package_description">%1$s\nMD5: %2$s\nDate: %3$s\nChangelog: %4$s</string>
    <string name="unsupported_rom_title">Unsupported ROM</string>
    <string name="unsupported_rom_message">Your ROM doesn\'t contain the necessary information to locate the OTA service.\nContact your developer to solve the issue.</string>
    <string name="no_changelog_configured">No changelog url configured</string>
    <string name="restart_needed">Restart needed</string>
</resources>