<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013 OTAPlatform

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <PreferenceCategory android:title="@string/settings" >  

        <Preference
            android:key="installtwrp"
            android:title="@string/check_twrp_updates" />

        <Preference
            android:key="browsegoo"
            android:title="@string/goo_browse" />

        <Preference
            android:key="logingoo"
            android:title="@string/menu_login" />

        <Preference
            android:key="recoveryactivity"
            android:title="@string/settings_recovery" />

    </PreferenceCategory>

    <!--PreferenceCategory android:title="@string/settings_interface" >

        <CheckBoxPreference
            android:key="darktheme"
            android:summary="@string/settings_theme_summary"
            android:title="@string/settings_theme_title" />
    </PreferenceCategory-->

    <PreferenceCategory
        android:key="settings_update"
        android:title="@string/settings_update" >

        <ListPreference
            android:key="checktime"
            android:title="@string/checktime_title"
            android:summary="@string/checktime_summary"
            android:dialogTitle="@string/checktime_title"
            android:entries="@array/time_notifications_options"
            android:entryValues="@array/time_notifications_values" />   

        <Preference
            android:key="downloadpath"
            android:title="@string/download_path" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="settings_gapps"
        android:title="@string/settings_gapps" > 

        <Preference
            android:key="gapps"
            android:title="@string/gapps_folder" />

        <Preference
            android:key="gapps_reset"
            android:title="@string/gapps_reset_folder" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_recovery" >

        <Preference
            android:key="recovery"
            android:summary="@string/recovery_summary"
            android:title="@string/recovery_title" />

        <Preference
            android:key="internalsdcard"
            android:summary="@string/internalsdcard_summary"
            android:title="@string/internalsdcard_title" />

        <Preference
            android:key="externalsdcard"
            android:summary="@string/externalsdcard_summary"
            android:title="@string/externalsdcard_title" />

        <com.beerbong.otaplatform.ui.component.ListPreferenceMultiSelect
            android:defaultValue="BACKUP|WIPESYSTEM|WIPEDATA|WIPECACHES|FIXPERM"
            android:entries="@array/wipe_options"
            android:entryValues="@array/wipe_options_values"
            android:key="showoptions"
            android:summary="@string/settings_showoptions_summary"
            android:title="@string/settings_showoptions_title" />

    </PreferenceCategory>

</PreferenceScreen>