<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:prova="http://schemas.android.com/apk/res/com.beerbong.otaplatform"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/header_height"
    android:background="@drawable/header_background"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/developer_header"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/header_text_color"
        android:textSize="@dimen/header_title_size" />

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="1" />

    <com.beerbong.otaplatform.ui.component.HeaderButton
        android:id="@+id/button_update"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        prova:icon="@drawable/update"
        prova:text="@string/update" />
    
    <com.beerbong.otaplatform.ui.component.HeaderButton
        android:id="@+id/button_flash"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        prova:icon="@drawable/flash"
        prova:text="@string/flash" />

    <com.beerbong.otaplatform.ui.component.HeaderButton
        android:id="@+id/button_settings"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        prova:icon="@drawable/settings"
        prova:text="@string/settings" />

</LinearLayout>