<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_background_color"
    android:orientation="vertical"
    android:padding="20dp" >

    <com.beerbong.otaplatform.ui.component.AutoFitTextView
        android:id="@+id/rom_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/light_blue_background"
        android:gravity="center_horizontal"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/light_blue_text_color" />

    <include layout="@layout/vseparator"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_background"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/developer_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black_text_color" />

        <TextView
            android:id="@+id/version_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <include layout="@layout/vseparator"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/white_background"
        android:orientation="vertical"
        android:padding="10dp" >

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include layout="@layout/vseparator" />

        <TextView
            android:id="@+id/no_new_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/no_new_rom_found"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black_text_color"
            android:visibility="gone" />

        <TextView
            android:id="@+id/remoteversion_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black_text_color" />

        <include layout="@layout/vseparator" />

        <TextView
            android:id="@+id/remoteversion_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <include layout="@layout/vseparator" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button_checkupdates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/light_blue_background"
                android:enabled="false"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/check_rom_updates"
                android:textColor="@color/light_blue_text_color" />

            <Button
                android:id="@+id/button_checkupdatesgapps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/light_blue_background"
                android:enabled="false"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/check_gapps_updates"
                android:textColor="@color/light_blue_text_color" />

            <Button
                android:id="@+id/button_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/light_blue_background"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/rom_download"
                android:textColor="@color/light_blue_text_color"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_download_delta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/light_blue_background"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/delta_download"
                android:textColor="@color/light_blue_text_color"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>