<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 OTAPlatform

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/updaterImage"
                    android:layout_width="59dp"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" >

                <com.beerbong.otaplatform.widget.AutoFitTextView
                    android:id="@+id/rom_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_blue_light"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/developer_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/version_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/remoteversion_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/remoteversion_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scrollbars="vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_download_delta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delta_download"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_download"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rom_download"
                android:visibility="gone" />

        </LinearLayout>

        <Button
            android:id="@+id/button_checkupdates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/check_rom_updates" />

        <Button
            android:id="@+id/button_checkupdatesgapps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/check_gapps_updates" />

        <Button
            android:id="@+id/button_flashqueue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/flash_queue" />

    </LinearLayout>
